@@ -355,8 +355,8 @@
 			if(sheet){
 				for(ICssRule *rule in sheet.rules){
 					//NSLog(@"RULE: %@", rule);
-					//NSLog(@" %@ match?: %d", _tagName, [rule match:_view]);
 					if([rule matchView:_view]){
+						//NSLog(@" %@#%@ match?: %d", _tagName, self.view.vid, [rule matchView:_view]);
 						for(ICssDecl *decl in rule.declBlock.decls){
 							//NSLog(@"  %@ %@ %@: %@", decl, decl.key, decl.key, decl.val);
 							[self applyDecl:decl baseUrl:rule.declBlock.baseUrl];
@@ -597,6 +597,7 @@
 			_backgroundRepeat = NO;
 		}
 	}
+	_backgroundImage = nil;
 	if(src){
 		if([IKitUtil isDataURI:src]){
 			_backgroundImage = [IKitUtil loadImageFromDataURI:src];
