@@ -18,3 +18,5 @@ label{margin:5 5 5 0; padding: 5;}
 
 #div{margin: 10; background: #eee; width: 100%; float: center; border: 2 solid #3000;}
 #div2{background: url(icon.png) no-repeat;}
+#container{background: #fff;}
+#container:hover{background: #ffc;}
